--- a/servers/common/catalog/index.html
+++ b/servers/common/catalog/index.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="/libs/uow.js"></script>
     <script type="text/javascript" src="catalog.js"></script>
   </head>
-  <body class="tundra loading">
+  <body class="tundra catalog loading">
     <div id="layout" dojoType="dijit.layout.BorderContainer" liveSplitters="true">
       <div id="header" dojoType="dijit.layout.BorderContainer" region="top" liveSplitters="false" gutters="false">
         <div dojoType="dijit.layout.ContentPane" region="left" splitter="false">
