Fix styling, dojo version in nginx_test file

--- a/servers/common/catalog/nginx_test.html
+++ b/servers/common/catalog/nginx_test.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>Local nginx status</title>
     <style type="text/css">
-      @import "http://ajax.googleapis.com/ajax/libs/dojo/1.4.1/dojo/resources/dojo.css";
-      @import "http://ajax.googleapis.com/ajax/libs/dojo/1.4.1/dijit/themes/tundra/tundra.css";
+      @import "http://ajax.googleapis.com/ajax/libs/dojo/1.5.0/dojo/resources/dojo.css";
+      @import "http://ajax.googleapis.com/ajax/libs/dojo/1.5.0/dijit/themes/tundra/tundra.css";
       @import "/catalog/catalog.css";
       body {
         margin: 20px;
@@ -19,8 +19,8 @@
             baseUrl: './'
         };
     </script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.4.1/dojo/dojo.xd.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.4.1/dijit/dijit.xd.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.5.0/dojo/dojo.xd.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.5.0/dijit/dijit.xd.js"></script>
     <script type="text/javascript" src="/libs/uow/trace.js"></script>
     <script type="text/javascript" src="/libs/uow.js"></script>
     <script type="text/javascript">
@@ -86,7 +86,7 @@
       });
     </script>
   </head>
-  <body class="tundra">
+  <body class="tundra catalog">
     <h1>Local nginx status</h1>
     <ul id="status"></ul>
     <p>If all of the services above list as green and <em>OK</em>, your local nginx configuration is correct. If any one is red and <em>NA</em>, something is wrong. Ask for help on the UOW mailing list.</p>
