--- a/servers/common/catalog/catalog_user_editor.html
+++ b/servers/common/catalog/catalog_user_editor.html
@@ -1,3 +1,3 @@
 <div class="catUserEditor">
-  <div dojoType="uow.ui.CollectionEditor" database="Admin" collection="AccessUsers"></div>
+  <div dojoType="uow.ui.CollectionEditor" target="Admin,AccessUsers"></div>
 </div>
