Room for help in user editor tab

--- a/servers/common/catalog/catalog_app.html
+++ b/servers/common/catalog/catalog_app.html
@@ -1,4 +1,4 @@
-<div class="catStart">
+<div class="catStart catPage">
   <h1>Developing web apps</h1>
   <p>This tutorial describes how to get started developing a new web application using Dojo and the services on this server.</p>
   
