--- a/servers/common/catalog/catalog_audio.html
+++ b/servers/common/catalog/catalog_audio.html
@@ -1,4 +1,4 @@
-<div id="audioContainer" class="catAudio">
+<div id="audioContainer" class="catAudio catPage">
   <script type="text/javascript">
     dojo.ready(function() {
       uow.app.catalog.parseExamples('audioContainer');
