--- a/servers/common/catalog/catalog_auth.html
+++ b/servers/common/catalog/catalog_auth.html
@@ -1,4 +1,4 @@
-<div id="authContainer" class="catAuth">
+<div id="authContainer" class="catAuth catPage">
   <script type="text/javascript">
     dojo.ready(function() {
       uow.app.catalog.parseExamples('authContainer');
