--- a/servers/common/catalog/catalog_db.html
+++ b/servers/common/catalog/catalog_db.html
@@ -1,4 +1,4 @@
-<div id="dbContainer" class="catDB">
+<div id="dbContainer" class="catDB catPage">
   <script type="text/javascript">
     dojo.require('dojo.date.stamp');
     dojo.ready(function() {
