--- a/servers/common/catalog/catalog_hark.html
+++ b/servers/common/catalog/catalog_hark.html
@@ -1,4 +1,4 @@
-<div class="catHark">
+<div class="catHark catPage">
   <h1><span style="color:red">DRAFT</span> harkthesound.org integration</h1>
   <p>This document describes how the harkthesound.org home page discovers games to list, launches them, and communicates with them. It is currently a draft and subject to change.</p>
   
