--- a/servers/common/catalog/catalog_home.html
+++ b/servers/common/catalog/catalog_home.html
@@ -1,4 +1,4 @@
-<div class="catHome">
+<div class="catHome catPage">
   <h1>Home</h1>
   <p>This is the catalog page of a UNC Open Web Server instance. The purpose of this page is to get you started with local development and demonstrate all of the services provided by the server. Use the links on the left to get started and view the examples.</p>
   <h2>Service status</h2>
