--- a/servers/common/catalog/catalog_start.html
+++ b/servers/common/catalog/catalog_start.html
@@ -1,4 +1,4 @@
-<div class="catStart">
+<div class="catStart catPage">
   <script type="text/javascript">
   dojo.require('dojo.string');
     function startOnSubmit(event) {
