--- a/servers/common/catalog/catalog_trace.html
+++ b/servers/common/catalog/catalog_trace.html
@@ -1,4 +1,4 @@
-<div class="catTrace">
+<div class="catTrace catPage">
   <script type="text/javascript">
     dojo.ready(function() {      
       uow.app.catalog.serviceStatus('Trace', uow.trace !== undefined);
