Fixed mis-committed debugging index.html

--- a/servers/common/catalog/index.html
+++ b/servers/common/catalog/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <title>UNC Open Web Server - Catalog Page</title>
     <style type="text/css">
-      @import "/dojo/1.5.0/dojo/resources/dojo.css";
-      @import "/dojo/1.5.0/dijit/themes/tundra/tundra.css";
-      @import "/dojo/1.5.0/dojox/grid/resources/Grid.css";
-      @import "/dojo/1.5.0/dojox/grid/resources/tundraGrid.css";
-      @import "/dojo/1.5.0/dojox/highlight/resources/highlight.css";
-      @import "/dojo/1.5.0/dojox/highlight/resources/pygments/friendly.css";
+      @import "http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojo/resources/dojo.css";
+      @import "http://ajax.googleapis.com/ajax/libs/dojo/1.5/dijit/themes/tundra/tundra.css";
+      @import "http://ajax.googleapis.com/ajax/libs/dojo/1.5.0/dojox/grid/resources/Grid.css";
+      @import "http://ajax.googleapis.com/ajax/libs/dojo/1.5.0/dojox/grid/resources/tundraGrid.css";
+      @import "http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojox/highlight/resources/highlight.css";
+      @import "http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojox/highlight/resources/pygments/friendly.css";
       @import "/libs/uow/ui/css/uow.css";
       @import "catalog.css";
     </style>
@@ -17,11 +17,11 @@
         var djConfig = {
             isDebug: false,
             parseOnLoad: true,
-            //baseUrl: './'
+            baseUrl: './'
         };
     </script>
-    <script type="text/javascript" src="/dojo/1.5.0/dojo/dojo.js"></script>
-    <script type="text/javascript" src="/dojo/1.5.0/dijit/dijit.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.5.0/dojo/dojo.xd.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.5.0/dijit/dijit.xd.js"></script>
     <script type="text/javascript" src="/libs/uow/trace.js"></script>
     <script type="text/javascript" src="/libs/uow.js"></script>
     <script type="text/javascript" src="catalog.js"></script>
