Move user editor help to right

--- a/servers/common/catalog/catalog_user_editor.html
+++ b/servers/common/catalog/catalog_user_editor.html
@@ -7,8 +7,8 @@
          region="center"></div>    
   </div>
   <div dojoType="dijit.layout.ContentPane" 
-       region="bottom"
-       style="height: 200px"
+       region="right"
+       style="width: 200px"
        splitter="true">
     <h2>User editor help</h2>
     <h3>Add a user</h3>
