Fixed some missed jsonic refs

--- a/servers/common/catalog/catalog_audio.html
+++ b/servers/common/catalog/catalog_audio.html
@@ -20,8 +20,8 @@
   <p>Speech and sound services are provided by the <a href="http://github.com/parente/jsonic">JSonic</a> library.</p>
   <h2>Links</h2>
   <ul>
-    <li><a href="http://github.com/parente/jsonic">JSonic project page</a></li>
-    <li><a href="http://parente.github.com/jsonic/">JSonic documentation</a></li>
+    <li><a href="http://github.com/uncopenweb/jsonic">JSonic project page</a></li>
+    <li><a href="http://uncopenweb.github.com/jsonic/">JSonic documentation</a></li>
   </ul>
 
   <h2>API</h2>
