Fixed location of gbishop's moved projects

--- a/servers/common/catalog/catalog_trace.html
+++ b/servers/common/catalog/catalog_trace.html
@@ -9,7 +9,7 @@
   
   <h2>Links</h2>
   <ul>
-    <li><a href="http://github.com/gbishop/dojotrace">Dojo Trace project page</a></li>
+    <li><a href="http://github.com/uncopenweb/dojotrace">Dojo Trace project page</a></li>
     <li><a href="/libs/uow/trace.js">Dojo Trace documentation</a> (See the comment at the top of the file.)</a></li>
   </ul>
   
