--- a/servers/common/catalog/catalog_db_editor.html
+++ b/servers/common/catalog/catalog_db_editor.html
@@ -2,52 +2,10 @@
      design="sidebar"
      class="catDbEditor catTool" 
      liveSplitters="true">
-  <div dojoType="dijit.layout.BorderContainer" 
-       gutters="false"
-       region="top"
-       class="catDbEditorHeader">
-    <div dojoType="dijit.Toolbar"
-         region="center"
-         class="cat">
-      database, collection picker
-    </div>
-    <div dojoType="dijit.Toolbar"
-         region="right"
-         class="cat">
-      <input type="radio" 
-             checked
-             dojoType="dijit.form.RadioButton" 
-             name="catDbEditorMode"
-             id="catDbEditorModeC"
-             value="collection" /
-      ><label for="catDbEditorModeC">Collection</label>
-      <input type="radio" 
-             dojoType="dijit.form.RadioButton" 
-             name="catDbEditorMode"
-             id="catDbEditorModeD"
-             value="database" /
-      ><label for="catDbEditorModeD">Database</label>
-    </div>
-  </div>
-  <div dojoType="dijit.layout.TabContainer" 
+  <div dojoType="dijit.layout.ContentPane" 
        region="center"
-       tabStrip="true"
-       class="cat">
-    <div dojoType="dijit.layout.ContentPane" 
-         title="Data"
-         class="cat">
-      collection editor
-    </div>
-    <div dojoType="dijit.layout.ContentPane" 
-         title="Access"
-         class="cat">
-      access editor
-    </div>
-    <div dojoType="dijit.layout.ContentPane" 
-         title="Schema"
-         class="cat">
-      schema editor
-    </div>
+       class="catDatabaseEditorPane">
+    <div dojoType="uow.ui.DatabaseEditor"></div>    
   </div>
   <div dojoType="dijit.layout.ContentPane" 
        region="right"
