update doc to remove D and L, use d and r instead.

--- a/servers/common/catalog/catalog_db.html
+++ b/servers/common/catalog/catalog_db.html
@@ -43,7 +43,7 @@
       <dt>database (string)</dt>
       <dd>Name of the database to access.</dd>
       <dt>collection (string)</dt>
-      <dd>Name of the collection in the database to access.</dd>
+      <dd>Name of the collection in the database to access or * to list collections.</dd>
       <dt>mode (string)</dt>
       <dd>Permissions requested for accessing the database. If mode is left undefined, all permissions are requested and granted for developers, non-developers get what is allowed for the collection. The mode string can contain one or more of the following characters representing permissions:
         <ul>
@@ -52,8 +52,6 @@
           <li>R : Restricted read that allows only simple equality queries that return a single record.
           <li>u : Update existing records</li>
           <li>d : Delete records</li>
-          <li>D : Drop collection</li>
-          <li>L : List collections</li>
         </ul>
       </ds>
     </dl>
