Some db editor help

--- a/servers/common/catalog/catalog_db_editor.html
+++ b/servers/common/catalog/catalog_db_editor.html
@@ -12,7 +12,25 @@
        style="width: 200px"
        splitter="true">
     <h2>Database editor help</h2>
-    <h3>Database Mode</h3>
-    <h3>Collection Mode</h3>
+    <h3>Database selection</h3>
+		<p>Enter the name of a database in the text box to view its collections.</p>
+		
+    <h3>Collection selection</h3>
+		<p>Pick a collection from the drop down box to view its details. Click the drop button next to the box to delete the collection from the database.</p> 
+		
+		<h3>Database info tab</h3>
+		<p>Scroll to the collection of interest. Click its name to open the collection detail tabs. Click the checkboxes under its name to grant or deny permissions to user roles.</p>
+		
+		<h3>Collection data tab</h3>
+		<p>Click <em>Create</em> to insert a data row. Double-click a cell to edit its contents and press <em>Enter</em> to accept your changes.</p>
+		
+		<p>Single click a row to select it. Hold <em>Shift</em> or <em>Meta</em> while clicking to select multiple rows. Click the <em>Delete</em> button to remove the selected rows.</p>
+		
+		<p>Rows with red text are invalid and not yet saved to the server. Valid rows immediately save to the server.</p>
+		
+		<p>Click <em>Undo</em> to revert your last insert, update, or delete. Continue clicking <em>Undo</em> to revert older changes. Click <em>Refresh</em> to force the grid to update.</p>
+		
+		<h3>Collection schema tab</h3>
+		<p></p>
   </div>
 </div>
