--- a/servers/common/catalog/catalog_user_editor.html
+++ b/servers/common/catalog/catalog_user_editor.html
@@ -18,7 +18,7 @@
     <p>Double-click a cell to edit and make your changes. Press <em>Enter</em> to save your edits or <em>Escape</em> to abort.</p>
     
     <h3>Delete users</h3>
-    <p>Single click a row to delete. Hold down <em>Shift</em> or <em>Meta</em> and click to select additional rows. Click <em>Delete</em> to remove the selected rows.</p> 
+		<p>Single click a row to select it. Hold <em>Shift</em> or <em>Meta</em> while clicking to select multiple rows. Click the <em>Delete</em> button to remove the selected rows.</p>
     
     <h3>Saving to the server</h3>
     <p>Rows with red text are invalid and not yet saved to the server. Valid rows immediately save to the server.</p>
