Finished basic db help

--- a/servers/common/catalog/catalog_db_editor.html
+++ b/servers/common/catalog/catalog_db_editor.html
@@ -31,6 +31,10 @@
 		<p>Click <em>Undo</em> to revert your last insert, update, or delete. Continue clicking <em>Undo</em> to revert older changes. Click <em>Refresh</em> to force the grid to update.</p>
 		
 		<h3>Collection schema tab</h3>
-		<p></p>
+		<p>Edit the text to define a valid <a href="http://json-schema.org/">JSON Schema</a>. When the text is red, it is not a valid JSON string. When the text is black, the the text is valid JSON, but not necessarily a valid schema.</p>
+		
+		<p>Click the <em>Save</em> button to save the schema and start enforcing it for new records in the collection. The JSON must be changed and valid for the <em>Save</em> button to enable.</p>
+		
+		<p>Click the <em>Revert</em> button to reset the text to the last schema saved to the database.</p>
   </div>
 </div>
