Seed changelog page for catalog

--- a/servers/common/catalog/index.html
+++ b/servers/common/catalog/index.html
@@ -117,9 +117,15 @@
              preload="false"
              title="User editor" 
              href="catalog_user_editor.html"></div>
+				<div dojoType="dojox.layout.ContentPane" 
+						 class="doc"
+             id="changelog"
+             preload="false"
+             title="Changelog" 
+             href="catalog_changelog.html"></div>
       </div>
       <div dojoType="dijit.layout.ContentPane" region="bottom" splitter="false">
-        Last updated: 9/11/10
+        Updated 10/11/10 - <a href="#changelog">Changelog</a>
       </div>
     </div>
   </body>
